data/test/type_check/fail/array_3.v
// Non-constant value in declaration
reg r = 1;
wire x[r:0];
